--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
                     gps-entity-place="latitude: 39.807659; longitude: -105.106779;" animation-mixer/
                 ></a-entity> 
 	    
-	     <a-entity gltf-model="./assets/Mar2animatedFF.gltf"
+	     <a-entity gltf-model="./assets/animatedecentpigeon3.gltf"
                    rotation="0 0 180"
                     scale=".5 .5 .5"
                     gps-entity-place="latitude: 39.807468; longitude: -105.106375;" animation-mixer/
                 ></a-entity> 
-	    	     <a-entity gltf-model="./assets/3FF.gltf"
+	    	     <a-entity gltf-model="./assets/animatedecentpigeon3.gltf"
            
 			        rotation="0 180 0"
                     scale=".5 .5 .5"
