--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             
 
 	    
-	     <a-entity gltf-model="./assets/animatedecentpigeon5.gltf"
+	     <a-entity gltf-model="./assets/dancer1.gltf"
                    rotation="0 0 0"
                     scale="1 1 1"
                     gps-entity-place="latitude: 39.807468; longitude: -105.106375;" animation-mixer/
