--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 	    
 	     <a-entity gltf-model="./assets/dancer2.gltf"
+		       material="color: white"
 		       position="0 0 -3"
                    rotation="0 0 0"
                     scale="1 1 1"
