--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             
 
 	    
-	     <a-entity gltf-model="./assets/dancer2.gltf"
+	     <a-entity gltf-model="./assets/finaldancers.gltf"
 		       material="color: white"
                    rotation="0 0 0"
                     scale="3 3 3"
