--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
             
 
 	    
-	     <a-entity gltf-model="./assets/finaldancers2.gltf"
+	     <a-entity gltf-model="./assets/dancer1fin.gltf"
+		       material="color: white"
+                   rotation="0 0 0"
+                    scale="2 2 2"
+                    gps-entity-place="latitude: 39.807468; longitude: -105.106375;" animation-mixer/
+                ></a-entity> 
+		
+		
+	     <a-entity gltf-model="./assets/dancer2fin.gltf"
 		       material="color: white"
                    rotation="0 0 0"
                     scale="2 2 2"
