--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	     
 		
 		
-	     <a-entity gltf-model="./assets/dancer2fin.gltf"
+	     <a-entity gltf-model="./assets/sambafin.gltf"
 		       material="color: white"
                    rotation="0 0 0"
                     scale="2 2 2"
